--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -11,11 +11,9 @@
     </div>
   <% end %>
 
+  
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
+    <%= f.label :user_id %><br>
     <%= f.label :content %><br>
     <%= f.text_area :content %>
   </div>
