--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@quote) do |f| %>
+<%= simple_form_for(@quote) do |f| %>
   <% if @quote.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@quote.errors.count, "error") %> prohibited this quote from being saved:</h2>
@@ -11,13 +11,11 @@
     </div>
   <% end %>
 
-  
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <%= f.input :user_id %>
+    <%= f.input :content %>
+    
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit %>
   </div>
 <% end %>
