--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-
+<p>
+  <strong>Name:</strong>
+<%= @quote.user.first_name %> <%= @quote.user.last_name %>
+  
+</p>
 
 <p>
   <strong>Content:</strong>
