--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-<%= @quote.user.first_name %> <%= @quote.user.last_name %>
+<%= @quote.user.full_name %>
   
 </p>
 
