--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,23 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  
 </head>
 <body>
+	<%= link_to "Quoter", quotes_path %>
+	<%= link_to "Home", quotes_path %>
+		<% if user_signed_in? %>
+	  
+			<%= link_to current_user.full_name, edit_user_registration_path %>
+			<%= link_to'Logout', destroy_user_session_path %>
+
+		<%else%>
+			<%= link_to "Register", new_user_registration_path %>
+		    <%= link_to "Log in", new_user_session_path %>
+	
+        <%end%>
+
+
  <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 <%= yield %>
