--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,16 @@
   
 </head>
 <body>
-	<%= link_to "Quoter", quotes_path %>
-	<%= link_to "Home", quotes_path %>
+	<%= link_to "Quoter", home_path %>
+	<%= link_to "Home", home_path %>
 		<% if user_signed_in? %>
 	  
 			<%= link_to current_user.full_name, edit_user_registration_path %>
-			<%= link_to'Logout', destroy_user_session_path %>
+			<%= link_to'Logout', logout_path %>
 
 		<%else%>
-			<%= link_to "Register", new_user_registration_path %>
-		    <%= link_to "Log in", new_user_session_path %>
+			<%= link_to "Register", register_path %>
+		    <%= link_to "Log in", login_path %>
 	
         <%end%>
 
